<resources>
    <string name="app_name">Galeria de Maquiagens</string>
    <string name="logo_description">Logo Maquiagem</string>
    <string name="dot_code">&#8226;</string>
    <string name="btn_skip">Pular</string>
    <string name="btn_next">Proxima</string>
    <string name="btn_back">Anterior</string>
    <string name="title_api">Maquiagens Ilimitadas</string>
    <string name="descriptionImg_api">Imagem de Cosmeticos</string>
    <string name="description_api">Buscas em um Banco de Dados, filtrando com diversas
        Caracteristicas</string>
    <string name="title_idioms">Varios Idiomas</string>
    <string name="descriptionImg_idioms">Imagem de Caracter Chines e outro Ocidental</string>
    <string name="description_idioms">4 Idiomas Disponiveis: Espanhol, Francês, Ingles e
        Português (BR)</string>
    <string name="title_backup">Tudo Salvo !</string>
    <string name="descriptionImg_backup">Imagem de uma Nuvem</string>
    <string name="description_backup">Os Dados do Usuario e Produtos Favoritados salvos
        online</string>
    <string name="title_login"><u>Faça seu Login</u></string>
    <string name="hint_nickname">Nome de Usuario</string>
    <string name="hint_password">Senha</string>
    <string name="remember_user">Lembrar Usuario e Senha</string>
    <string name="btn_login">Entrar</string>
    <string name="text_noRegister">Não possui uma Conta ?</string>
    <string name="btn_clickHere">Cadastre-se</string>
    <string name="title_singup">Olá, Tudo bem ?</string>
    <string name="description_singup">Faça seu Cadastro para acessar o Sistema</string>
    <string name="btn_goLogin">Já Possuo Conta</string>
    <string name="label_personal"><u>Sobre o Usuario</u></string>
    <string name="hint_name">Nome e Sobrenome</string>
    <string name="hint_idioms">Idioma</string>
    <string name="label_access"><u>Dados de Acesso</u></string>
    <string name="hint_email">Email</string>
    <string name="hint_confirmPassword">Confirmar Senha</string>
    <string name="btn_singup">Cadastrar</string>
    <string-array name="array_idioms">
        <item>Português (BR)</item>
        <item>Ingles</item>
        <item>Espanhol</item>
        <item>Frances</item>
    </string-array>
    <string name="incorrect_password">As Senhas não são Iguais</string>
    <string name="title_categories">Encontre o que Busca</string>
    <string name="subTitle_categories">Confira as Categorias de Maquiagens que estão disponiveis</string>
    <string name="option_profile">Seu Perfil</string>
    <string name="option_exit">Sair</string>
    <string name="option_titleMakeup">Maquiagens</string>
    <string name="option_searchMakeup">Pesquisar Maquiagem</string>
    <string name="option_categoriesMakeup">Maquiagens por Categoria</string>
    <string name="option_allMakeup">Historico de Buscas</string>
    <string name="option_favoriteMakeup">Minhas Favoritas</string>
    <string name="option_catalog">Inicio</string>
    <string name="option_popularMakeup">Maquiagens mais Favoritadas</string>
    <string name="option_titleLocation">Localização</string>
    <string name="option_location">Localização Atual</string>
    <string name="option_titleResources">Recursos</string>
    <string name="option_sensorProximity">Sensor de Proximidade</string>
    <string name="option_titleConfig">Dados e Pesonalização</string>
    <string name="option_config">Configurações</string>
    <string name="option_dataUse">Dados de Uso</string>
    <string name="open_menu">Abrir o Menu Lateral</string>
    <string name="close_menu">Fechar o Menu Lateral</string>
    <string name="hint_brand">Marca</string>
    <string name="hint_type">Tipo de Maquiagem</string>
    <string name="hint_category">Formato do Produto</string>
    <string name="tip_image">Imagem de Maquiagem</string>
    <string name="btn_search">Pesquisar</string>
    <string name="string_empty"> </string>
    <string name="text_showTags">Mostrar Tags</string>
    <string name="text_hideTags">Esconder Tags</string>
    <string-array name="array_tags">
        <item>Canadian</item>
        <item>CertClean</item>
        <item>Chemical Free</item>
        <item>Dairy Free</item>
        <item>EWG Verified</item>
        <item>EcoCert</item>
        <item>Fair Trade</item>
        <item>Gluten Free</item>
        <item>No Talc</item>
        <item>Hypoallergenic</item>
        <item>Natural</item>
        <item>Non-GMO</item>
        <item>Organic</item>
        <item>Vegan</item>
        <item>Peanut Free Product</item>
        <item>Sugar Free</item>
        <item>USDA Organic</item>
        <item>alcohol free</item>
        <item>cruelty free</item>
        <item>oil free</item>
        <item>purpicks</item>
        <item>silicone free</item>
        <item>water free</item>
    </string-array>
    <string-array name="array_brand">
        <item>almay</item>
        <item>alva</item>
        <item>anna sui</item>
        <item>annabelle</item>
        <item>benefit</item>
        <item>boosh</item>
        <item>burt\'s bees</item>
        <item>butter london</item>
        <item>c\'est moi</item>
        <item>cargo cosmetics</item>
        <item>china glaze</item>
        <item>clinique</item>
        <item>coastal classic creation</item>
        <item>colourpop</item>
        <item>covergirl</item>
        <item>dalish</item>
        <item>deciem</item>
        <item>dior</item>
        <item>dr. hauschka</item>
        <item>e.l.f.</item>
        <item>essie</item>
        <item>fenty</item>
        <item>glossier</item>
        <item>green people</item>
        <item>iman</item>
        <item>l\'oreal</item>
        <item>lotus cosmetics usa</item>
        <item>maia\'s mineral galaxy</item>
        <item>marcelle</item>
        <item>marienatie</item>
        <item>maybelline</item>
        <item>milani</item>
        <item>mineral fusion</item>
        <item>misa</item>
        <item>mistura</item>
        <item>moov</item>
        <item>nudus</item>
        <item>nyx</item>
        <item>orly</item>
        <item>pacifica</item>
        <item>penny lane organics</item>
        <item>physicians formula</item>
        <item>piggy paint</item>
        <item>pure anada</item>
        <item>rejuva minerals</item>
        <item>revlon</item>
        <item>sally b\'s skin yummies</item>
        <item>salon perfect</item>
        <item>sante</item>
        <item>sinful colours</item>
        <item>smashbox</item>
        <item>stila</item>
        <item>suncoat</item>
        <item>w3llpeople</item>
        <item>wet n wild</item>
        <item>zorah</item>
        <item>zorah biocosmetiques</item>
    </string-array>
    <string-array name="array_type">
        <item>Blush</item>
        <item>Bronzer</item>
        <item>Eyebrow</item>
        <item>Eyeliner</item>
        <item>Eyeshadow</item>
        <item>Foundation</item>
        <item>Lip Liner</item>
        <item>Lipstick</item>
        <item>Mascara</item>
        <item>Nail Polish</item>
    </string-array>
    <string-array name="array_categoryBlush">
        <item>Powder</item>
        <item>Cream</item>
    </string-array>
    <string-array name="array_categoryBronzer">
        <item>Powder</item>
    </string-array>
    <string-array name="array_categoryEyebrow">
        <item>Pencil</item>
    </string-array>
    <string-array name="array_categoryEyeliner">
        <item>Liquid</item>
        <item>Pencil</item>
        <item>Gel</item>
        <item>Cream</item>
    </string-array>
    <string-array name="array_categoryEyeshadow">
        <item>Palette</item>
        <item>Pencil</item>
        <item>Cream</item>
    </string-array>
    <string-array name="array_categoryFoundation">
        <item>Concealer</item>
        <item>Liquid</item>
        <item>Contour</item>
        <item>Bb cc</item>
        <item>Cream</item>
        <item>Mineral</item>
        <item>Powder</item>
        <item>Highlighter</item>
    </string-array>
    <string-array name="array_categoryLipLiner">
        <item>Pencil</item>
    </string-array>
    <string-array name="array_categoryLipstick">
        <item>Lipstick</item>
        <item>Lip gloss</item>
        <item>Liquid</item>
        <item>Lip stain</item>
    </string-array>
    <string name="title_possibleError">Possiveis Erros</string>
    <string name="btn_close">Fechar</string>
    <string name="title_noConnection">Sem Internet</string>
    <string name="title_invalidData">Dados Invalidos</string>
    <string name="title_noGps">Sem GPS</string>
    <string name="title_noExist">Produto não Encontrado</string>
    <string name="title_noLocation">Sem Localização</string>
    <string name="title_existUser">Usuario já Existente</string>
    <string name="title_noExistUser">Usuario não Encontrado</string>
    <string name="title_errorAPI">Operação Não Relizada</string>
    <string name="title_noData">Sem Dados</string>
    <string name="error_input">Preencha os Campos</string>
    <string name="error_noExists">Não existe nenhum Produto Cadastrado com esses Filtros</string>
    <string name="error_connection">Sem Conexão com %s</string>
    <string name="error_location">Erro ao Recuperar a Ultima Localização</string>
    <string name="error_recoveryData">Nenhum dado foi informado para a Busca</string>
    <string name="error_sensor">Sensor de Proximidade não Disponivel no Dispostivo</string>
    <string name="error_selected">Nenhuma Opção foi Selecionada.&lt;br />Tente Novamente</string>
    <string name="error_lenght">O Campo %1$s aceita somente %2$s Caracteres</string>
    <string name="error_wrongInput">Campo %s Invalido</string>
    <string name="error_valueRequired">Campo Obrigatorio</string>
    <string name="error_noMatchPassword">As Senhas não são Iguais</string>
    <string name="error_existUser">O Usuario %s já existe no Sistema. Realize o Login !</string>
    <string name="error_noExistUser">O Usuario %s não existe no Sistema. Realize o Cadastro !</string>
    <string name="error_api">Houve um erro na execução da solicitação. Tente Novamente</string>
    <string name="error_tableEmpty">Não há registros com os dados Solicitados. &lt;br />
        Algumas Funções ainda estão sendo desenvolvidas, aguarde.</string>
    <string name="error_dataUser">Infelizmente, não foi possivel obter os Dados do Usuario</string>
    <string name="error_category">Categorias só estarão disponiveis após selecionar um
        Tipo de Produto. &lt;br />&lt;br /> * Mascara e Nail Polish não possuem categorias</string>
    <string name="error_notArgsSearch">É necessario ao menos UMA opção escolhida para realizar
        a busca</string>
    <string name="error_JWT">Não foi Possivel realizar o Login no Aplicativo</string>
    <string name="error_change">Não foi Possivel alterar %1$s do %2$s</string>
    <string name="error_database">Não foi possivel salvar os Dados no Banco de Dados. Tente Novamente</string>
    <string name="txt_titleLocation"><b>Localização Atual</b></string>
    <string name="txt_noSearch">Não encontramos sua Localização.&lt;br /> Tente Novamente</string>
    <string name="txt_probablyError">Essa é uma localização baseada na ultima localização
        registrada. Pode representar um <b>enderço não exato</b></string>
    <string name="button_reset">Tentar Novamente</string>
    <string name="txt_wait">Aguarde enquanto Buscamos os Dados…</string>
    <string name="txt_country">&lt;b>País&lt;/b>: %1$s - %2$s</string>
    <string name="txt_city">&lt;b>Cidade&lt;/b>: %1$s - %2$s</string>
    <string name="txt_address">&lt;b>Endereço&lt;/b>: %1$s - %2$s, %3$s</string>
    <string name="txt_cep">&lt;b>CEP&lt;/b>: %s</string>
    <string name="btn_showFragment">Mostrar Opções</string>
    <string name="text_changeIdiom">Alterar Idioma</string>
    <string name="text_changeTheme">Alterar Tema</string>
    <string name="text_darkTheme">Tema Escuro</string>
</resources>