<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_slide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pageview"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_slide"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/descriptionImg_api"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/txt_slideTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:text="@string/title_api"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/txt_slideDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/description_api"
        android:textColor="@color/black"
        android:textSize="18sp" />
</LinearLayout>